footer gap issue fixed, added codemonkey trademark

--- a/style/footer.css
+++ b/style/footer.css
@@ -2,6 +2,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin-top: -80px;
 }
 
 
@@ -132,6 +133,7 @@ textarea{
     width: 95%;
     height: 50%;
     padding: 30px;
+    padding-bottom: 0px;
     justify-content: space-between;
     flex-wrap: wrap;
     
@@ -168,6 +170,11 @@ textarea{
     width: 40px;
     height: 40px;
     overflow: hidden;
+}
+
+.codemonkeyTrademark{
+    color: rgb(224, 222, 222);
+    font-size: 0.8rem;
 }
 
 @media (max-width:1200px){
